# qfuncmm-api

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
templates/: plot_interactive.html  status.html  visualize.html
